deployment/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zk-gaming-tk
spec:
  selector:
    matchLabels:
      app: zk-gaming-tk
  template:
    spec:
      containers:
        - name: zk-gaming-tk
          image: "localhost:5000/aleo/zk-gaming-tk:latest"
