deployment/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zk-gaming-tk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  rules:
    - host: "zk-gaming-tk.localhost"
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: zk-gaming-tk
                port:
                  name: api
